Changes in version 1.5 (... 2008)

 - Enable use of other meshes for shadow mesh generation, can be used to speed up shadow generation and rendering for complex meshes. Patch based on a version by tonic.

 - Fixed Software renderer color flicker, was a signed shift bug I believe.

 - Fixed usage of SIrrCreationParameters struct, which dind't have copy constructor and assignment operator anymore, since the Irrlicht version string was made const.

 - New glext.h (version 40)

 - Added support for read-only locking of textures. Can speed up those calls.

 - Added support for locking RTTs under OpenGL.

 - Implementation of UserData events from system events.

 - ICameraSceneNode::setIsOrthogonal replaced by a parameter to setProjectionMatrix.

 - All meshbuffers are now dynamically allocated to avoid problems with grabbed buffers, which may be deleted before the last drop happens (due to static memory allocation).

 - Enhanced scene graph traversal with example from rogerborg.

 - FPS camera disabling of event receiver works better now.

 - scene deserialization allows for a user defined callback after a new scene node is created.

 - Fixed tangent mesh loading from .irrmesh files.

 - OpenGL clamp modes are now properly set.

 - IMeshManipulator::transformMesh renamed to transform, also supports meshbuffers now.
   scaleMesh renamed to scale, supports meshbuffers as well.

 - vector3d::rotationToDirection added.

 - New mesh generators for cone and cylinder.

 - Hardware accelerated Vertex and Index Buffer support finally integrated into Irrlicht. Thanks to a resource handling idea by Klasker and the almost immediate implementation by Luke, Irrlicht now supports VBOs under OpenGL and D3D.